--- a/wiki/Output.wiki
+++ b/wiki/Output.wiki
@@ -16,8 +16,10 @@ The default index name has a format {{{<ReadLength>_<Seed>_<ReadType>_<RefFileNa
 
 ==Mapping Results==
 PerM can output in *SAM* format, by specify the flag -o `*`.sam.
-Users can use the samtools to do some downstream analysis, ex: pileup read to get the consensus seq. For more information about sam format, check http://samtools.sourceforge.net/ and its [http://sourceforge.net/apps/mediawiki/samtools/index.php?title=SAM_protocol#C_APIs_.28SAMtools-C.29 wikipage] to see how to translate the sam(bam)to bed format. 
-
+Users can use the samtools to do some downstream analysis, ex: pileup read to get the consensus seq. For more information about sam format, check http://samtools.sourceforge.net/ and its [http://sourceforge.net/apps/mediawiki/samtools/index.php?title=SAM_protocol#C_APIs_.28SAMtools-C.29 wikipage]. 
+Once the reads is pileup, you can also 
+{{{samtools pileup -S -f <reference fasta> <sam file> | awk '{print $1, $2-1, $2, $4}' > mywiggle.bed}} use the command to get the wig file with base signal. Further process can make a condensed wig for display.
+ 
 The GUI tool [http://bioinf.scri.ac.uk/tablet/ Tablet] can be used to visualize the *sorted* sam output. You can also try [http://people.virginia.edu/~arq5x/utilities.html Araon's Quinlan]'s [http://people.virginia.edu/~arq5x/files/utilities/python/samToBed.py python script] to translate the sam format to bed file to show result in the genome browser. 
 
 Here I described the the original output format, which has the ext name `*`.mapping. 
