--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -53,7 +53,7 @@ For example:
 || *--includeReadsWN*|| || Include the reads with N or '.' by encoding N or '.' as A or 3 ||
 || *--statsOnly* || || Output the mapping statistics in stdout only, without saving alignments to files||
 || *--ignoreQS* || || Ignore the quality scores in fastq or QUAL files. ||
-|| *--seed* ||_{F,,0,, | F,,1,, | F,,2,, | S,,11,, | F,,3,, | F,,4,, | S,,12,,}_|| specify the seed pattern, which has a specific full sensitive to 0 to 4 mismatches or one SNP + one or two color's mismatches. Check [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for seed patterns to balance the sensitivity and running time.||
+|| *--seed* ||_{F,,0,, | F,,1,, | F,,2,, | F,,3,, | F,,4,, | S,,11,, | S,,12,,}_|| specify the seed pattern, which has a specific full sensitive to 0 to 4 mismatches or one SNP + one or two color's mismatches. Check [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for seed patterns to balance the sensitivity and running time.||
 || *--readFormat*||_{fasta | fastq | csfasta | csfastq}_||Read in reads in the specified format, instead of guessing according to the ext name. ||
 || *--delimiter*||_char_|| _char_ is a character used as the delimiter to separate the the read id, and the additional info in the line with '>' in fasta or csfasta. ||
 
