--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -57,7 +57,10 @@ For example:
 || *--statsOnly* || || Output the mapping statistics in stdout only, without saving alignments to files||
 || *--ignoreQS* || || Ignore the quality scores in fastq or QUAL files. ||
 || *--seed* ||_{F,,0,, | F,,1,, | F,,2,, | F,,3,, | F,,4,, | S,,11,, | S,,12,,}_|| specify the seed pattern, which has a specific full sensitive to 0 to 4 mismatches or one SNP + one or two color mismatches. Check [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for seed patterns to balance the sensitivity and running time.||
+|| *--refFormat* || _{fasta | list | index }_|| Take refs file in the specified format,
+instead of gussing according to its ext name. ||
 || *--readFormat*||_{fasta | fastq | csfasta | csfastq}_||Read in reads in the specified format, instead of guessing according to the ext name. ||
+|| *--outputFormat*||_{ sam | mapping }_|| Overwrite the default output mapping format option. ||
 || *--delimiter*||_char_|| _char_ is a character used as the delimiter to separate the the read id, and the additional info in the line with '>' in fasta or csfasta. ||
 
 [http://code.google.com/p/perm/wiki/single_end_example Examples]
