--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -65,7 +65,8 @@ Its up to you. The default won't save the index. I can build hg18 index with 16 
 === Q9 How if my input reads has different read length, can we mapped it together? ===
 Unfortunately, PerM's index is for fixed read length. It use the first read length to build the index. PerM will print warning message when it encounter a read with unexpected length and keep mapping the rest of reads. To check how many reads are thrown away, use wc -l command and check the different read length in the final report. You are actually suggested to split the reads according to their lengths to different files and mapped each of them independently. 
 
-=== Q11 I set up a same twice with different value in my command line. Which arg that PerM will use? ===
+=== Q11 I there are more reads mapped to multiple places than the 
+multi mapped stats reported at the end, when -A is specified? ===
 === Q10 Why there are more reads mapped to multiple places than the 
 multi mapped stats reported at the end, when -A is specified?? ===
 
