--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -72,5 +72,7 @@ In PerM *Multi-mapped* reads are defined as reads mapped to multiple places with
 === Q11 I set up a same twice with different value in my command line. Which arg that PerM will use? ===
 Ex: if you set -v 5 -v 3. It will take the first arg. If you have more concern, fixed the arg and run it again.
 
+=== Q12 why the sam output format of PerM has fewer lines than BFAST ===
+Notice BFAST output those read that NOT MAPPED in their output sam file. PerM can optionally output the unmapped reads to fasta, csfasta or fastq format so you can easily map the unmapped reads to other reference.
 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
