--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -77,6 +77,12 @@ Notice BFAST output those read that NOT MAPPED in their output sam file. PerM ca
 
 === Q13 Which seed should I use? ===
 Seed is the pattern that PerM use to do the filtering. The choice is the balance of sensitivity and speed. For SOLiD reads, you may be interested in special full sensitivity, ex: one SNP one error (so use S11 seed) or one SNP two error (so use S12). 
-For read length 50, S12 is faster than F4 by slightly lose some sensitivity, because its weight is 15 or more, not just 13. 
+For read length 50, S12 is faster than F4 by slightly lose some sensitivity, because its weight is 15 or more, not just 13. For reads shorter than 25bp and very small reference genome, use F1 or F0. 
+
+=== Q14 What quality score format does PerM take ===
+There are two type of fastq score scale (Phred [http://maq.sourceforge.net/fastq.shtml Fastq] and Illumina [http://en.wikipedia.org/wiki/FASTQ_format fastq])
+For SOLiD reads, PerM assumes the the format with the highest score represented in ';'
+For Illumina reads, PerM assumes the quality score with the highest score represented in 'I'. PerM currently unable to recognize the score if you use the Illlumina format for SOLiD or vice versa.
+
 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
