Edited wiki page through web user interface.

--- a/wiki/Limitation.wiki
+++ b/wiki/Limitation.wiki
@@ -1,12 +1,12 @@
 #labels Phase-Requirements
-  * PerM doesn't support reads shorter than 25 base pairs. 
+  * PerM doesn't support reads shorter than 25 base pairs for F2. It doesn't handle reads shorter than 13 bp for F0, exact match.  
   * PerM doesn't support SOLiD reads with more than 64 base pair.
   * PerM doesn't support single-end Illumina reads with more than 128 base pair.
-  * PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end.
+  * PerM doesn't support mate-paired Illumina reads with more than 64 base pair in each end. It will cut the pair ended reads into 64bp by default.
   * A maximum 200 mapping per read (end) will be print consecutively in the output file. 
   * The reference can't be more than 4 GB.
   * A single reference sequence should be larger than the read length. 
-  * PerM will discard any reads with 'N'. 
+  * PerM will discard any reads with 'N' by default. 
   * No reads will be mapped to any reference region with 'N'. This is the reason that users may experience that the total alignments founded by PerM is less than other mappers, given the same full sensitivity threshold. 
   * It requires 4.5 bytes (one integer + 4 bits) + 256M memory for mapping, so as the disk space if user wants to store the index to save preprocessing time for the future.  
 
