--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -44,7 +44,7 @@ For example:
 || *-m* || || Create the reference index, without reusing the saved index. ||
 || *-s* ||_Path_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
 || *-v* ||_Int_|| where Int i the number of mismatches allowed in one end. ||
-|| *-t* ||_Int_|| Ignore the first Int base from the 5' end. Ex: if the first 5 bases is a barcode, put -t 5. Currently only work for Illumina read ||
+|| *-t* ||_Int_|| Ignore the first Int base from the 5' end. Ex: if the first 5 bases is a barcode, put -t 5||
 || *-T* ||_Int_|| Kept the first Int bases after bases ignored by -t option. Ignore the rest bases in 3' end. Ex: -T 30 means use only first 30 bases (signals) after the ignore base for -t option. ||
 
 || *-o* ||_Path_|| where Path is for output the mapping of one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. Ex: -o out.sam will output in SAM format; -o out.mapping will output in .mapping format.||
